# nishiki

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
adapters/cuad/: build_catalog.py  calibrate.py
adapters/cuad/profile/: AGENT.md  KOI.yaml  MODELS.yaml
samples/span_extract/: README.md  agent.py  gold.json
samples/span_extract/.nishiki/: KOI.yaml  MODELS.yaml  live.jsonl
samples/span_extract/.nishiki/runs/: 1782870937_run.json
samples/text_to_sql/: README.md  agent.py  build_db.py  gold.jsonl  shop.db
samples/text_to_sql/.nishiki/: KOI.yaml  MODELS.yaml  live.jsonl
samples/text_to_sql/.nishiki/runs/: 1783324592_run.json
src/nishiki/: __init__.py  __main__.py  autoprobe.py  backends.py  dotenv.py  generic_adapter.py  init_cmd.py  koi_estimate.py  koi_report.py  live.py  models_cmd.py  orchestrator.py  relay.py  runner.py  scoring.py  suggest_floor.py  webui.py
src/nishiki/playbooks/: koi.md
tests/: test_assembler.py  test_autoprobe.py  test_cuad.py  test_dotenv.py  test_estimate.py  test_generic_adapter.py  test_live.py  test_relay.py  test_runner.py  test_scoring.py  test_smoke.py  test_webui.py
